@@ -1,10 +1,32 @@
+/********************************************************************\
+ * dwi-backend.c -- DWI backend module for QOF                      *
+ * Copyright (C) 2004 Linas Vepstas <linas@linas.org>               *
+ * Copyright (C) 2008 Neil Williams <linux@codehelp.co.uk>          *
+ * http://dwi.sourceforge.net                                       *
+ *                                                                  *
+ * This library is free software; you can redistribute it and/or    *
+ * modify it under the terms of the GNU Lesser General Public       *
+ * License as published by the Free Software Foundation; either     *
+ * version 2.1 of the License, or (at your option) any later version.
+ *                                                                  *
+ * This library is distributed in the hope that it will be useful,  *
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of   *
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the    *
+ * GNU Lesser General Public License for more details.              *
+ *                                                                  *
+ * You should have received a copy of the GNU Lesser General Public *
+ * License along with this program; if not, contact:                *
+ *                                                                  *
+ * Free Software Foundation           Voice:  +1-617-542-5942       *
+ * 51 Franklin Street, Fifth Floor    Fax:    +1-617-542-2652       *
+ * Boston, MA  02110-1301,  USA       gnu@gnu.org                   *
+\********************************************************************/
 
 #include <dwi/database.h>
-#include <qof/qofbackend.h>
-#include <qof/qofbackend-p.h>
-#include <qof/gnc-trace.h>
+#include <qof.h>
+#include "qofmap.h"
 
-static short module = MOD_BACKEND;
+static QofLogModule log_module = DWI_BACKEND;
 
 struct DwiBackend_s 
 {
@@ -35,7 +57,7 @@ dwiend_compile_query (QofBackend *qbe, QofQuery *qry)
 {
 	DwiBackend *be = (DwiBackend *) qbe;
 	printf ("howdy partner %p compile query\n", be);
-	return 0x1234;
+	return (gpointer)0x1234;
 }
 
 /* ============================================================= */
@@ -83,7 +105,7 @@ dwiend_new (void)
 	be = g_new0 (DwiBackend, 1);
 	dwiend_init (be);
 
-	LEAVE(" ")
+	LEAVE(" ");
 	return (QofBackend *) be;
 }
 
